--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "version": "0.4.10",
   "dependencies": {
-    "@calcit/procs": "^0.7.5",
+    "@calcit/procs": "^0.8.44",
     "@quamolit/phlox-utils": "^0.0.2",
     "@quamolit/touch-control": "^0.0.13",
     "bottom-tip": "^0.1.5",
     "fontfaceobserver-es": "^3.3.3",
-    "nanoid": "^4.0.2",
-    "pixi.js": "7.2.4"
+    "nanoid": "^5.0.6",
+    "pixi.js": "7.x"
   },
   "devDependencies": {
     "mobile-detect": "^1.4.5",
-    "vite": "^4.4.2"
+    "vite": "^5.2.3"
   }
 }
